--- a/config.py.example
+++ b/config.py.example
@@ -1,9 +1,9 @@
 
 config = {
-    'HOST' : 'localhost',
+    'HOST' : '127.0.0.1',
     'PORT' : '6600',
     'PASSWORD' : None,
-    'STREAM_URL' : "http://localhost:8080/mpd.mp3",
-    'TOKEN' : 'XXXXXXXXXXXX',
-    'SUPER_USER' : 'YYYYYYY',
+    'STREAM_URL' : "http://localhost:8080/your_mountpoint",
+    'TOKEN' : 'telegram_token',
+    'SUPER_USER' : 'telegram_username',
 }
